--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         ></div>
       </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
