--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The cat API</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="icon" href="./assets/dog.png" />
+    <title>The Dog API</title>
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +30,7 @@
   <body>
     <main>
       <h1>The Dog API 🐶</h1>
-      <h3>By: @darioparejadiaz</h3>
+      <h3 class="author">By: @darioparejadiaz</h3>
       <button type="button" id="random-btn" class="button primary-button">
         Show Me Other Dogs!
       </button>
@@ -90,6 +91,6 @@
       </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
