function names changed, README.md added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/dog.png" />
+    <link rel="icon" href="./assets/app-icons/dog.png" />
     <title>The Dog API</title>
     <link rel="stylesheet" href="./style.css" />
 
@@ -38,19 +38,19 @@
       <!-- ********************************* RANDOM PET SECTION ************************************** -->
       <!-- ********************************************************************************************* -->
 
-      <section class="section random-cats-section">
+      <section class="section random-dogs-section">
         <h2>Random Dogs</h2>
         <hr />
         <div
-          id="random-cats-container"
-          class="images-container random-cats-container"
+          id="random-dogs-container"
+          class="images-container random-dogs-container"
         ></div>
       </section>
 
       <!-- ********************************* FAVORITE PET SECTION ************************************** -->
       <!-- ********************************************************************************************* -->
 
-      <section class="section favorite-cats-section">
+      <section class="section favorite-dogs-section">
         <h2>Favorite Dogs</h2>
         <hr />
 
@@ -85,8 +85,8 @@
 
         <h3>Favorite dogs gallery🐾</h3>
         <div
-          id="favorite-cats-container"
-          class="images-container favorite-cats-container"
+          id="favorite-dogs-container"
+          class="images-container favorite-dogs-container"
         ></div>
       </section>
     </main>
